<resources>
    <string name="app_name">SIBISA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="sibisa">Sibisa</string>
    <string name="level">Level 1</string>
    <string name="level_basic">Level Dasar</string>
    <string name="level_intermediate">Level Intermediate</string>
    <string name="lesson_tittle">Mempelajari Bahasa Dasar</string>
    <string name="lesson_quiz_button">Kuis</string>
    <string name="lesson_carousel_desc">huruf A</string>
    <string name="lesson_subtittle">Mempelajari huruf A</string>
    <string name="title_login_page">Login</string>
    <string name="login">Masuk</string>
    <string name="title_profile">Profile</string>
    <string name="level_heading">LEVEL</string>
    <string name="exp_heading">EXP</string>
    <string name="username">Username</string>
    <string name="login_from_register_cta">Sudah punya akun? Masuk</string>
    <string name="register_from_login_cta">Belum punya akun? Daftar </string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="rank1_number">1</string>
    <string name="rank2_number">2</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="rank3_number">3</string>
    <string name="text_leaderboard_empty">No user profiles available</string>
    <string name="sign_out">Keluar</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout_dialog_message">Apakah kamu yakin ingin keluar dari akun?</string>
    <string name="picture_dialog_message">Apakah kamu yakin ingin mengganti foto profil?</string>
    <string name="dialog_message_yes">Ya</string>
    <string name="dialog_message_ok">OK</string>
    <string name="dialog_message_no">Tidak</string>
    <string name="text_exp">+%s XP</string>
    <string name="unknown">unknown</string>
    <string name="capture_button_alt">Capture</string>
    <string name="app_logo">SIBISA</string>
    <string name="question_prompt">Peragakan huruf/kata di bawah ini!</string>
    <string name="level_dasar">Level Dasar</string>
    <string name="huruf_vokal">Huruf Vokal</string>
    <string name="kata_dasar">Kata Dasar</string>
    <string name="kuis">Kuis</string>
    <string name="kuis_akhir">Kuis Akhir</string>
    <string name="level_pertengahan">Level Pertengahan</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="lesson_exercise_button">Latihan</string>
    <string name="congrats_text_heading">Selamat!</string>
    <string name="congrats_text">Kamu berhasil menjawab pertanyaan-pertanyaan dengan benar</string>
    <string name="failed_text_heading">Coba lagi!</string>
    <string name="failed_text">Kamu belum berhasil menjawab pertanyaan dengan benar, yuk coba lagi!</string>
    <string name="continue_to_home">Lanjut</string>
    <string name="back_to_lesson">Kembali ke materi</string>
    <string name="help">Petunjuk</string>
    <string name="skip_question">Lewati Pertanyaan</string>
    <string name="skip_quiz">Lewati Kuis</string>
    <string name="close">close</string>
    <string name="ok">OK</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="icon">icon</string>
    <string name="acceptance_threshold">Batas persentase: %s%%</string>
</resources>