<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ferry"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/icon_home"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regist_name_layout"
        style="@style/LoginRegisterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_home"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <EditText
            android:id="@+id/regist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regist_username_layout"
        style="@style/LoginRegisterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regist_name_layout"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <EditText
            android:id="@+id/regist_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regist_email_layout"
        style="@style/LoginRegisterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regist_username_layout"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <EditText
            android:id="@+id/regist_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regist_password_layout"
        style="@style/LoginRegisterTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regist_email_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <EditText
            android:id="@+id/regist_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/loginCtaTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regist_password_layout" />

    <TextView
        android:id="@+id/loginCtaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>