<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/image_divider_1"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/level_dasar"
        android:src="@drawable/chapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/level_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/level_basic"
        android:src="@drawable/ic_level__g1011"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_divider_1" />

    <TextView
        android:id="@+id/level"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/huruf_vokal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_btn1" />

    <ImageButton
        android:id="@+id/level_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/circle_button_disabled"
        android:contentDescription="@string/level_basic"
        android:src="@drawable/ic_level_disabled__g1017"
        app:layout_constraintEnd_toStartOf="@id/level_btn3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level" />

    <TextView
        android:id="@+id/level_2"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/kata_dasar"
        app:layout_constraintEnd_toEndOf="@id/level_btn2"
        app:layout_constraintStart_toStartOf="@id/level_btn2"
        app:layout_constraintTop_toBottomOf="@id/level_btn2" />

    <ImageButton
        android:id="@+id/level_btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/circle_button_disabled"
        android:contentDescription="@string/level_basic"
        android:src="@drawable/ic_level_disabled__g1023"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/level_btn2"
        app:layout_constraintTop_toBottomOf="@id/level" />

    <TextView
        android:id="@+id/level_3"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/kuis_akhir"
        app:layout_constraintEnd_toEndOf="@id/level_btn3"
        app:layout_constraintStart_toStartOf="@id/level_btn3"
        app:layout_constraintTop_toBottomOf="@id/level_btn3" />

    <ImageView
        android:id="@+id/image_divider_2"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/level_pertengahan"
        android:src="@drawable/chapter_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_3" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="124dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="24dp"
        android:background="@color/ferry"
        app:layout_constraintBottom_toBottomOf="@id/image_divider_1"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_divider_1"
        app:layout_constraintVertical_bias="0.608" />

    <View
        android:id="@+id/horizontal_line_2"
        android:layout_width="124dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/ferry"
        app:layout_constraintBottom_toBottomOf="@id/image_divider_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintTop_toTopOf="@id/image_divider_1"
        app:layout_constraintVertical_bias="0.608" />

    <View
        android:id="@+id/horizontal_line_3"
        android:layout_width="124dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="24dp"
        android:background="@color/ferry"
        app:layout_constraintBottom_toBottomOf="@id/image_divider_2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_divider_2"
        app:layout_constraintVertical_bias="0.608" />

    <View
        android:id="@+id/horizontal_line_4"
        android:layout_width="124dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="24dp"
        android:background="@color/ferry"
        app:layout_constraintBottom_toBottomOf="@id/image_divider_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintTop_toTopOf="@id/image_divider_2"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        style="?attr/textAppearanceHeadline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/coming_soon"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_divider_2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>