<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/image_predicted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/text_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/question_prompt"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/text_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/acceptance_threshold"
                android:textAppearance="?attr/textAppearanceCaption" />

            <TextSwitcher
                android:id="@+id/text_question_switcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/text_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="Lorem Ipsum" />

                <TextView
                    android:id="@+id/text_question_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="Lorem Ipsum" />
            </TextSwitcher>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:contentDescription="@string/help"
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/circle_button"
        android:src="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:text="@string/unknown"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <View
        android:id="@+id/box_prediction"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/skip_question"
        app:layout_constraintBottom_toTopOf="@id/skip_quiz_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/broken_white"
        android:padding="8dp"
        android:text="@string/skip_quiz"
        android:textColor="@color/riviera_paradise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.bangkit.sibisa.ui.custom.DraggableCoordinatorLayout
        android:id="@+id/parentCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/draggableCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="110dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageReference"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:visibility="gone"
                tools:ignore="ContentDescription"
                tools:srcCompat="@drawable/a_lesson"
                tools:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>
    </com.bangkit.sibisa.ui.custom.DraggableCoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>